[gd_scene load_steps=12 format=2]

[ext_resource path="res://coin/CoinPentagram.png" type="Texture" id=1]
[ext_resource path="res://coin/HeavenCoin.gd" type="Script" id=2]
[ext_resource path="res://coin/Coin.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0111

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 73, 37, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 193, 37, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 313, 37, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 433, 37, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 553, 37, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 673, 37, 100, 100 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HeavenCoin" type="Node2D" groups=["Coins", "HeavenCoins"]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
modulate = Color( 1, 0.843137, 0.301961, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
frame = 3
playing = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -13.109

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="CoinSound" to="." method="_on_CoinSound_finished"]
